--- a/index.html
+++ b/index.html
@@ -7,37 +7,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="estilos/estilos.css">
-    <title>Practica JS</title>
+    <title>Calculadora IMC</title>
 </head>
 <body>
-    <section class="container-divisas d-flex flex-column align-items-center justify-content-center">
-        <h1>Convertidor de divisas</h1>
-        <div class="d-flex flex-row container justify-content-center align-items-center">
-            <div class="importe col-3">
-                <h3>Importe</h3>
-                <label for=""></label>
-                <input type="number">
+    <div class="container d-flex flex-column ">
+        <h1 class="text-center">Calculadora del IMC para adultos</h1>
+        <div class="cont-parametros">
+            <div>
+                <p>Estatura: Metros</p>
+                <label for="estatura"></label>
+                <input type="num" name="estatura" id="estatura">
             </div>
-            <div class=" col-3">
-                <h3>De:</h3>
-                <label for=""></label>
-                <select name="" id="">
-                    <option value="">USD - Dólar Estadounidense</option>
-                </select>
+            <div class="cont-kg">
+                <p>Peso: Kilogramos</p>
+                <label for="peso"></label>
+                <input type="num" name="peso" id="peso">
             </div>
-            <div class="col-3">
-                <h3>A:</h3>
-                <label for=""></label>
-                <select name="" id="">
-                    <option value="">MXN - Peso MExicano</option>
-                </select>
-            </div>    
+            <button class="btnn">Calcular</button>
         </div>
-        <div class=" resultado container w-100 d-flex flex-column align-items-center">
-            <h3>Resultado</h3>
-            <p></p>
-        </div>
-    </section>
+    </div>
 
 
     <script src="script.js"></script>
