avance 2.0 de entrega

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <li>Nuevo</li>
             <li>V 2.0</li>
         </ul>
-        <div class="carrito">
-            <i class="fa-solid fa-cart-shopping h4"></i>
+        <div class="carrito" id="carrito">
+            <i class="fa-solid fa-cart-shopping h4 abrir_carrito"></i>
         </div>
     </header>
     <main>
@@ -63,82 +63,82 @@
                 <div class="d-flex flex-column col-4 container flex-column carta_producto">
                     <img src="img/brazo_blanco.jpg" alt="">
                     <div class="flex-column">
-                        <h4>Nombre del prodcuto</h4>
+                        <h4>Brazo blanco</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia similique eaque alias quo, reprehenderit facilis totam dolorem officia praesentium! Eligendi.</p>
-                        <span>$###</span>
+                        <span>$2300</span>
                         <button class ="btn btn-danger btn-comprar">Comprar</button>
                     </div>
                 </div>
                 <div class="d-flex flex-column col-4 carta_producto">
                     <img src="img/Brazo_hibrido.jpg" alt="">
                     <div>
-                        <h4>Nombre del prodcuto</h4>
+                        <h4>Brazo hibrido</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia similique eaque alias quo, reprehenderit facilis totam dolorem officia praesentium! Eligendi.</p>
-                        <span>$###</span>
+                        <span>$2000</span>
                         <button class ="btn btn-danger btn-comprar">Comprar</button>
                     </div>
                 </div>
                 <div class="d-flex flex-column col-4 carta_producto">
                     <img src="img/torso_gris.jpg" alt="">
                     <div>
-                        <h4>Nombre del prodcuto</h4>
+                        <h4>Torso mecánico</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia similique eaque alias quo, reprehenderit facilis totam dolorem officia praesentium! Eligendi.</p>
-                        <span>$###</span>
+                        <span>$5000</span>
                         <button class ="btn btn-danger btn-comprar">Comprar</button>
                     </div>
                 </div>
                 <div class="d-flex flex-column col-4 carta_producto">
                     <img src="img/manos.png" alt="">
                     <div>
-                        <h4>Nombre del prodcuto</h4>
+                        <h4>Mano mecánica</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia similique eaque alias quo, reprehenderit facilis totam dolorem officia praesentium! Eligendi.</p>
-                        <span>$###</span>
+                        <span>$3000</span>
                         <button class ="btn btn-danger btn-comprar">Comprar</button>
                     </div>
                 </div>
                 <div class="d-flex flex-column col-4 carta_producto">
                     <img src="img/ms_blanco.jpg" alt="">
                     <div>
-                        <h4>Nombre del prodcuto</h4>
+                        <h4>Brazo eléctrico blanco</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia similique eaque alias quo, reprehenderit facilis totam dolorem officia praesentium! Eligendi.</p>
-                        <span>$###</span>
+                        <span>$3000</span>
                         <button class ="btn btn-danger btn-comprar">Comprar</button>
                     </div>
                 </div>
                 <div class="d-flex flex-column col-4 carta_producto">
                     <img src="img/pierna.jpg" alt="">
                     <div>
-                        <h4>Nombre del prodcuto</h4>
+                        <h4>Pierna mecánica</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia similique eaque alias quo, reprehenderit facilis totam dolorem officia praesentium! Eligendi.</p>
-                        <span>$###</span>
+                        <span>$3500</span>
                         <button class ="btn btn-danger btn-comprar">Comprar</button>
                     </div>
                 </div>
                 <div class="d-flex flex-column col-4 carta_producto">
                     <img src="img/torso_mujer.jpg" alt="">
                     <div>
-                        <h4>Nombre del prodcuto</h4>
+                        <h4>Torso libre mujer</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia similique eaque alias quo, reprehenderit facilis totam dolorem officia praesentium! Eligendi.</p>
-                        <span>$###</span>
+                        <span>$10000</span>
                         <button class ="btn btn-danger btn-comprar">Comprar</button>
                     </div>
                 </div>
                 <div class="d-flex flex-column col-4 carta_producto">
                     <img src="img/torso_balnco.jpg" alt="">
                     <div>
-                        <h4>Nombre del prodcuto</h4>
+                        <h4>Full body</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia similique eaque alias quo, reprehenderit facilis totam dolorem officia praesentium! Eligendi.</p>
-                        <span>$###</span>
+                        <span>$12000</span>
                         <button class ="btn btn-danger btn-comprar">Comprar</button>
                     </div>
                 </div>>
             </div>
-            <div class="seccion_carrito">
+            <div class="seccion_carrito" id="seccion_carrito">
                 <h4>Carrito</h4>
                 <table class="detalles_carrito">
-                    <thead>
+                    <thead class="container-fluid">
                         <td>Imagen</td>
-                        <td>Producto</td>
+                        <td >Producto</td>
                         <td>Precio</td>
                         <td>Cantidad</td>
                     </thead>
