Ultmos pasos de tercera entrega

--- a/index.html
+++ b/index.html
@@ -26,25 +26,26 @@
     </header>
     <main>
 
-<!-- 
+<!-- == ESTRUCUTRA MENSAJE DE BIENVENIDA == -->
 
-== ESTRUCUTRA MENSAJE DE BIENVENIDA ==
-
-<div class="fondo_oscuro">
-    <div class="Banner_bienvenida">
-        <h4>Bienvenido</h4>
-        <div>
-            <label for="">Eres nuevo</label>
-            <input type="checkbox" name="" id="">
+        <div class="fondo_oscuro">
+            <div class="Banner_bienvenida" id="banner_bienvenida">
+                <h4>Bienvenido</h4>
+                <div class="inputs-bienvenida" id="inputs_bienvenida">
+                    <div>
+                        <label for="">Eres nuevo</label>
+                        <button id="checbox_registrarse">Registrarse</button>
+                        <!-- <input type="checkbox" name="" id="checbox_registrarse"> -->
+                    </div>
+                    <div>
+                        <label for="">Estoy registrado</label>
+                        <button id="checbox_iniciar">Iniciar</button>
+                        <!-- <input type="checkbox" name="" id="checbox_iniciar"> -->
+                    </div>
+                </div>
+            </div>        
         </div>
-        <div>
-            <label for="">Estoy registrado</label>
-            <input type="checkbox" name="" id="">
-        </div>
-    </div>        
-</div>
-
--->
+<!-- == ESTRUCUTRA MENSAJE DE BIENVENIDA == -->
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active banner">
