continuando con el log in

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 <div class="inputs-bienvenida" id="inputs_bienvenida">
                     <div>
                         <label for="">Eres nuevo</label>
-                        <button id="checbox_registrarse">Registrarse</button>
+                        <button id="btn_registrar">Registrarse</button>
                         <!-- <input type="checkbox" name="" id="checbox_registrarse"> -->
                     </div>
                     <div>
                         <label for="">Estoy registrado</label>
-                        <button id="checbox_iniciar">Iniciar</button>
+                        <button id="btn_iniciar">Iniciar</button>
                         <!-- <input type="checkbox" name="" id="checbox_iniciar"> -->
                     </div>
                 </div>
