--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
 <!-- == ESTRUCUTRA MENSAJE DE BIENVENIDA == -->
 
-        <div class="fondo_oscuro">
+        <div class="fondo_oscuro" id="fondo_oscuro">
             <div class="Banner_bienvenida" id="banner_bienvenida">
+                <i class="fa-solid fa-xmark" id="cerrar_banner"></i>
                 <h4>Bienvenido</h4>
                 <div class="inputs-bienvenida" id="inputs_bienvenida">
                     <div>
